--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "better-sqlite3": "^8.5.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.27.2",
     "eventsource": "^2.0.2",
