--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node .",
+    "start": "DEBUG=* tsx .",
     "generate": "npx drizzle-kit generate:sqlite"
   },
   "keywords": [],
@@ -27,6 +27,7 @@
     "nanoid": "^4.0.1",
     "prom-client": "^14.2.0",
     "ts-node": "^10.9.1",
+    "tsx": "^3.12.8",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
